--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">ProjectDemo</string>
+    <string name="server_client_id">1048371782395-4fsunb0ie7l5s778lkg6qvnsilgks7v0.apps.googleusercontent.com</string>
+    <string name="facebook_app_id">496752344660149</string>
+
 </resources>
